# habits_api

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  weekdays_fixture.json
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: create_weekdays.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency_alter_habit_time_and_more.py  0003_week_habit_end_time_habit_days_of_week.py  0004_alter_week_day.py  0005_alter_habit_frequency.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_tg_username_user_tg_chat_id.py
